fixed marker icon box not showing

--- a/components/MarkerIconMobile/MarkerIconMobile.module.css
+++ b/components/MarkerIconMobile/MarkerIconMobile.module.css
@@ -5,6 +5,7 @@
 
 @media (max-width: 900px) {
   .box {
+    display: block;
     width: 100%;
     box-sizing: border-box;
     padding: 15px;
